# double_helix

./: .gitignore  20230315_steerable_double_helix.ipynb  README.md  Testing_Detection_Efficiency_on_DHPSF_ZStack_20240418.ipynb  debug_script.py  detection_demo.ipynb  detection_demo_20230412.ipynb  detector.py  detector20240403.py  detector_20240403.py  double_helix.yaml  fight_club_tools.py  install_plugin.py  pyproject.toml  setup.py  test_fit.py
.github/workflows/: pr_check.yml  pr_check_dev.yml  publish.yml  scheduled_test.yml
double_helix/: DoubleGaussFit.py  SplineFit.py  __init__.py  detection_params_dialog.py  double_helix.yaml  fight_club_tools.py  z_mapping.py  z_range_dialog.py
double_helix/FitFactories/: DoubleHelixFit  DoubleHelixFit_SepGuess.py  DoubleHelixFit_Theta.py  DoubleHelixFit_Theta_20240910.py
double_helix/image_modules/: DH_calibration.py  z_calibration.py
double_helix/recipes/: DH_mappings.py  set_comparison.py
double_helix/vis_modules/: DH_mappings.py
testing_notebooks/: 20230314_steerable_double_helix.ipynb  20230315_steerable_double_helix.ipynb  20240417_Optimal_Sigma_Solver.ipynb  20241209_Detector_Comparison.ipynb  20250331_Normalization_Testing.ipynb  Basis_Filters_Including_Sigma_DHPSF_Z_Stack_20240418.ipynb  Basis_Filters_Including_Sigma_Simulated_DHPSF_20240418.ipynb  DH_Detection_Testing.ipynb  Testing_Detection_Efficiency_on_DHPSF_ZStack_20250122.ipynb  detection_demo_20230412.ipynb  dh_detection_optimal_sigma_solver.ipynb
testing_notebooks/.ipynb_checkpoints/: 20230315_steerable_double_helix-checkpoint.ipynb  20250403_Normalized_Detection_Testing_647-checkpoint.ipynb  DH_Detection_Testing-checkpoint.ipynb  Testing_Detection_Efficiency_on_DHPSF_ZStack_20240418-checkpoint.ipynb  Testing_Detection_Efficiency_on_DHPSF_ZStack_20250122-checkpoint.ipynb  dh_detection_optimal_sigma_solver-checkpoint.ipynb
tests/: test_convolutions.py  test_coordinate_conventions.py  test_set_comparison.py
